--- a/src/main/resources/templates/prestige-principal.html
+++ b/src/main/resources/templates/prestige-principal.html
@@ -29,7 +29,7 @@
         <div class="collapse navbar-collapse" id="navbarScroll">
             <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
                 <li class="nav-item">
-                    <a class="nav-link active" style="color:blue" aria-current="page" th:href="@{/invoice-prestige-total-invoices-all}">All-Invoice</a>
+                    <a class="nav-link active" style="color:orange" aria-current="page" th:href="@{/invoice-prestige-total-invoices-all}">All-Invoice</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" style="color:red" th:href="@{/coustomers-all-invoices-listes-unpaid}">UNPAID</a>
