add the distinc country filtre

--- a/src/main/resources/templates/coustomers-all-invoices-listes-senegal.html
+++ b/src/main/resources/templates/coustomers-all-invoices-listes-senegal.html
@@ -14,8 +14,8 @@
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
-<body class="container">
-<header class=" card-body d-flex justify-content-center" style="background-color:orange;color:white"><b>ALL UNPAID LIST </b></header>
+<body class="">
+<header class=" card-body d-flex justify-content-center" style="background-color:yellow;color:white"><b>ALL LIST TO SENEGAL</b></header>
 
 <table class="table">
     <thead class="">
