--- a/src/main/resources/templates/customer-send-money-registre-form.html
+++ b/src/main/resources/templates/customer-send-money-registre-form.html
@@ -47,7 +47,7 @@
                 <option>SENEGAL</option>
                 <option>USA</option>
                 <option>MALI</option>
-                <option>COTE D'IVOIRE</option>
+                <option>COTE DIVOIRE</option>
             </select>
             </div>
             <div class="container">
