--- a/src/main/resources/templates/filtre.html
+++ b/src/main/resources/templates/filtre.html
@@ -13,7 +13,7 @@
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
-<body class="container">
+<body class="">
 <header class=" card-body d-flex justify-content-center text-uppercase" style="background-color:#66ff66;color:white"><b>you wanna paid this transaction ?</b></header>
 <table class="table">
     <thead class="">
