--- a/src/main/resources/templates/coustomers-all-invoices-listes-unpaid.html
+++ b/src/main/resources/templates/coustomers-all-invoices-listes-unpaid.html
@@ -14,7 +14,7 @@
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
-<body class="container">
+<body class="">
 <header class=" card-body d-flex justify-content-center" style="background-color:orange;color:white"><b>ALL UNPAID LIST </b></header>
 
 <table class="table">
