--- a/src/main/resources/templates/invoice-prestige-total-invoices-all.html
+++ b/src/main/resources/templates/invoice-prestige-total-invoices-all.html
@@ -16,7 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
-<body class="container">
+<body class="">
 <header class=" card-body d-flex justify-content-center" style="background-color:blue;color:white"><b>ALL INVOICE CUSTOMER </b></header>
         <input class="form-control" id="myInput" type="text" placeholder="Search..">
 </form>
