add the distinc country filtre

--- a/src/main/resources/templates/alter.html
+++ b/src/main/resources/templates/alter.html
@@ -113,8 +113,8 @@
             </div>
 
                 <div class="text-center">
-                    <button class="btn center" style="margin:30px;background-color:green;color:white" type="submit">SEND</button>
-                    <button  class="btn center" style="margin:30px;background-color:orange" ><a th:href="@{/coustomers-all-invoices-listes-unpaid}" style="color:white;text-decoration:none">GO BACK</a></button>
+                    <button class="btn center" style="margin:30px;background-color:green;color:white" type="submit">ALTER</button>
+                    <button  class="btn center" style="margin:30px;background-color:orange" ><a th:href="@{/coustomers-all-invoices-listes-unpaid}" style="color:white;text-decoration:none">CANCEL</a></button>
                 </div>
                 <p class=" text-center font-italic" style="color:orange"><b>Prestige sender and receive money</b></p>
             </div>
