--- a/src/main/resources/templates/coustomers-all-invoices-listes-senegal.html
+++ b/src/main/resources/templates/coustomers-all-invoices-listes-senegal.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body class="">
-<header class=" card-body d-flex justify-content-center" style="background-color:yellow;color:white"><b>ALL LIST TO SENEGAL</b></header>
+<header class=" card-body d-flex justify-content-center" style="background-color:black;color:white"><b>ALL LIST TO SENEGAL</b></header>
 
 <table class="table">
     <thead class="">
